@@ -1,5 +1,10 @@
 2000-01-02  Timur Bakeyev <mc@bat.ru>
 
+	* doc/gconf/Makefile.am: Replace unportable install -d with $MKINSTALLDIRS.
+	install -m 0644 - with $(INSTALL_DATA).
+
+2000-01-02  Timur Bakeyev <mc@bat.ru>
+
 	* po/uk.po: Add missed "\n" in 2 strings. Things sholud be checked 
 	before commit :)
 	
